[tool.poetry]
name = "kattis-helper"
version = "0.1.0"
description = ""
authors = ["Måns Magnusson <exoji2e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "0.0.1"
progressbar2 = "3.53.1"
requests = "2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
