[tool.poetry]
name = "kattis-helper"
version = "0.1.0"
description = ""
authors = ["Måns Magnusson <exoji2e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
bs4 = "^0.0.2"
progressbar2 = "^4.5.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
